--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,11 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Cesar Ramirez | SDET" />
+    <meta property="og:description" content="Software Development Engineer in Test (SDET) with expertise in automation, performance testing, and CI/CD." />
+    <meta property="og:url" content="https://cesbear.com" />
+    <meta property="og:image" content="https://cesbear.com/icons/profile.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
