--- a/public/index.html
+++ b/public/index.html
@@ -2,47 +2,49 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <meta name="robots" content="index, follow">
-    <meta property="og:title" content="Cesar Ramirez | SDET" />
-    <meta property="og:description" content="Software Development Engineer in Test (SDET) with expertise in automation, performance testing, and CI/CD." />
+    
+    <!-- Favicon -->
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+
+    <!-- SEO & Description -->
+    <meta name="description" content="Experienced SDET | Test Automation | Performance Testing | CI/CD | Passionate about building high-quality software with cutting-edge tools." />
+    <meta name="author" content="Cesar Ramirez" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Cesar Ramirez | SDET & Test Automation Engineer" />
+    <meta property="og:description" content="Experienced SDET with expertise in mobile & web automation, performance testing, and CI/CD." />
     <meta property="og:url" content="https://cesbear.com" />
     <meta property="og:image" content="https://cesbear.com/icons/profile.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-    <title>React App</title>
+    <!-- Twitter Cards -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Cesar Ramirez | SDET & Test Automation Engineer" />
+    <meta name="twitter:description" content="Automation expert with a strong background in quality engineering and DevOps." />
+    <meta name="twitter:image" content="https://cesbear.com/icons/profile.png" />
+    
+    <!-- Google Site Verification (Si usas Google Search Console) -->
+    <meta name="google-site-verification" content="TU_CÓDIGO_DE_VERIFICACIÓN" />
+
+    <!-- PWA (Progresive Web App) Support -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icons/profile.png" />
+
+    <!-- Web Performance Optimizations -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet" />
+
+    <title>Cesar Ramirez | SDET</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Your browser does not support JavaScript or it is disabled. This site requires JavaScript to function properly.</noscript>
+
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
